--- a/cic/so/dekker/package.json
+++ b/cic/so/dekker/package.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^4.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.2",
     "gulp-zip": "^4.2.0"
   }
