--- a/cic/so/dekker/package.json
+++ b/cic/so/dekker/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-nunjucks": "^4.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-zip": "^4.2.0"
   }
